--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+body{
+    background-color: #5e534c;
+}
+
 
 /*Header*/
 
@@ -25,21 +29,22 @@ nav ul{
 }
 
 nav li{
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
 }
 
 nav li a{
     text-decoration: none;
     font-family: 'Source Sans 3', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 400;
     color: #000;
-    padding: 0.3em 1em;
+    padding: 1em 0;
 }
 
-nav li a:hover{
-    color: #30302f;
-    border-bottom: 2px solid #000;
+nav .some li{
+   display: inline-block;
+   margin-top: 0.8em;
 }
 
 .logo{
@@ -48,11 +53,7 @@ nav li a:hover{
     justify-self: center;
 }
 
-.visually-hidden{
-    display: none;
-}
-
-#search{
+input[type=search]{
     display: none;
 }
 
@@ -64,6 +65,16 @@ nav li a:hover{
 #bars i, #search-btn i, #kurv i{
     font-size: 20px;
     color: #30302f;
+}
+
+#search.show-search{
+    display: block;
+    position: absolute;
+    top: 59px;
+    right: 0;
+    background-color: #fff;
+    width: 40%;
+    height: 70px;
 }
 
 
@@ -123,6 +134,7 @@ main a, main p{
 
 .kategorier{
     margin: 1em;
+    margin-right: 0;
     padding-bottom: 1.5em;
     border-bottom: 1px solid beige;
 }
@@ -155,15 +167,17 @@ main a, main p{
     border-radius: 50%;
     display: flex;
     align-items: center;
+    align-self: center;
     min-width: max-content;
     max-height: fit-content;
-    margin: 7% 0.8em 0 0.8em;
+    margin: 0 1em 0 0.8em;
     box-shadow: 3px 3px 0.5em #30302f79;
 }
 
 .se-alle a{
     text-align: center;
     font-size: 16px;
+    border-bottom: 1px solid beige;
     margin: 36px 22px;
 }
 
@@ -171,17 +185,9 @@ main a, main p{
     display: grid;
     grid: repeat(7, 1fr)/1fr 1fr;
     gap: 0.8em;
-    margin: 0.8em;
+    padding-bottom: 1.5em;
+    margin: 1em;
 }
-
-/*.all-grid h2{
-    width: 100%;
-}
-
-.gridprodukt{
-    padding: 0.5em 0.8em 0.5em 0;
-    max-width: 47%;
-}*/
 
 .gridbillede{
     max-width: 100%;
@@ -192,8 +198,186 @@ main a, main p{
 
 
 
+/*Nyhedsbrev*/
+
+.nyhedsbrev{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #5e534c;
+    border-top: 1px solid beige;
+    border-bottom: 1px solid beige;
+    padding: 1.5em 1em;
+    margin: 1em 0;
+}
+
+.nyhedsbrev h2{
+    font-size: 22px;
+    font-family: 'Lora', serif;
+    font-weight: 300;
+    margin-bottom: 1.3em;
+}
+
+.nyhedsbrev p{
+    color: beige;
+    font-size: 16px;
+    font-family: 'Source Sans 3', sans-serif;
+    font-weight: 300;
+    text-align: center;
+}
+
+.nyhedsbrev-input{
+    display: flex;
+    flex-direction: column;
+    margin-top: 1.5em;
+    margin-bottom: 1em;
+}
+
+input[type=email]{
+    border: 1px solid #30302f;
+    border-radius: 180px;
+    padding: 14px 160px 14px 20px;
+    margin-bottom: 1em;
+}
+
+input[type=submit]{
+    background-color: beige;
+    color: #30302f;
+    border: none;
+    border-radius: 180px;
+    padding: 14px 90px 14px 90px;
+    margin-bottom: 1em;
+}
+
+
+
 /*Footer*/
 
 footer{
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    background-color: #fff;
+    padding: 1.3em 1em;
+}
+
+footer section{
+    display: flex;
+    flex-direction: column;
+}
+
+footer h3{
+    color: #000;
+    font-size: 18px;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+
+footer ul{
+    list-style: none;
+}
+
+footer li{
+    font-family: 'Source Sans 3', sans-serif;
+}
+
+footer li a{
+    font-size: 16px;
+    font-weight: 400;
+    color: #000;
+}
+
+.footer-some li{
+    display: inline-block;
+}
+
+
+
+/*Andet*/
+
+.visually-hidden{
+	border: 0;
+	clip: rect(0 0 0 0);
+	height: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+}
+
+
+
+/*Mobil*/
+
+@media screen and (max-width: 768px){
+    .show{
+        display: block;
+        position: absolute;
+        top: 49px;
+        left: 0;
+        background-color: #fff;
+        width: 100%;
+        height: 100%;
+        padding: 1em 0;
+    }
+}
+
+
+
+/*Desktop*/
+
+@media screen and (min-width: 769px) {
+    header{
+        border-bottom: 1px solid #657786;
+    }
+    
+    #bars{
+        display: none;
+    }
+
+    nav{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    nav li{
+        display: inline-block;
+        padding: 0.3em 1.3em;
+    }
+
+    nav li a{
+        font-size: 16px;
+    }
+
+    .some{
+        display: none;
+    }
+
+    .banner{
+        min-height: 300px;
+    }
+
+    .kategorier{
+        margin: 1.5em 2em;
+        margin-right: 0;
+    }
+
+    .produkt{
+        max-height: 5%;
+    }
+
+    .nyhedsbrev{
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+
+
+    footer{
+        flex-direction: row;
+        justify-content: space-around;
+        gap: 40px;
+    }
 }
