øget responsivitet + tilføjelse af hover-effects, transitions og "add to cart"-knapper

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ p{
 h1{
    color: #fff;
    font-size: 28px;
-   font-family: 'Lora', serif;
+   font-family: 'Source Sans 3', sans-serif;
    font-weight: 400;
    text-align: center;
    padding: 0.3em;
@@ -210,6 +210,10 @@ main a, main p{
    width: 160px;
 }
 
+.produkt a p, .gridprodukt a p{
+    margin-top: 4px;
+}
+
 
 .sliderbillede{
     max-width: 100%;
@@ -222,6 +226,7 @@ main a, main p{
 
 .se-alle{
     background-color: #657786;
+    border: 1px solid #657786;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -259,6 +264,22 @@ main a, main p{
     display: block;
 }
 
+.add{
+    font-size: 12px;
+    color: #657786;
+    background-color: #ffffffd6;
+    border: none;
+    border-radius: 180px;
+    padding: 8px 7px;
+    position: relative;
+    bottom: 35px;
+    left: 78%;
+    z-index: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -30px;
+}
 
 
 
@@ -356,7 +377,7 @@ footer h3{
     color: #000;
     font-size: 18px;
     font-weight: 300;
-    margin-bottom: 6px;
+    margin-bottom: 15px;
 }
 
 
@@ -378,11 +399,18 @@ footer li a{
     color: #000;
 }
 
+.footer-kontakt li:nth-of-type(1){
+    font-weight: 600;
+    color: #657786;
+}
 
 .footer-some li{
     display: inline-block;
 }
 
+.footer-some li a{
+    color: #30302f;
+}
 
 
 
@@ -404,7 +432,7 @@ footer li a{
 
 .til-toppen{
     position: fixed;
-    bottom: 7%;
+    bottom: 5%;
     right: 7%;
     z-index: 10;
 }
@@ -417,6 +445,12 @@ footer li a{
     text-decoration: none;
     padding: 10px 8px;
     border-radius: 180px;
+    border: 1px solid #000;
+}
+
+.til-toppen a:hover{
+    background-color: #30302f;
+    transition: 0.2s ease-in-out;
 }
 
 
@@ -434,6 +468,7 @@ footer li a{
         width: 100%;
         height: 100%;
         padding: 1em 0;
+        z-index: 100;
     }
 }
 
@@ -472,6 +507,12 @@ footer li a{
         font-size: 16px;
     }
 
+    nav li a:hover{
+        color: #657786;
+        text-decoration: underline;
+        transition: 0.2s ease-in;
+    }
+
 
     .some{
         display: none;
@@ -480,6 +521,10 @@ footer li a{
 
     .banner{
         min-height: 300px;
+    }
+
+    h1{
+        font-size: 32px;
     }
 
 
@@ -493,13 +538,58 @@ footer li a{
         max-height: 5%;
     }
 
+    .produkt a:hover, .gridprodukt a:hover{
+        text-decoration: underline;
+    }
+
+    .se-alle:hover{
+        background-color: #8A9AA4;
+        box-shadow: 3px 3px 0.7em #30302f8e;
+        transition: 0.3s ease-in-out;
+    }
+
+    .add:hover{
+        color: #30302f;
+        background-color: #fff;
+        transition: 0.2s ease-in-out;
+        cursor: pointer;
+    }
+
+
 
     .nyhedsbrev{
         flex-direction: row;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: center;
+        padding: 2.5em 1em;
     }
 
+    .nyhedsbrev h2{
+        text-align: left;
+        max-width: 55%;
+    }
+
+    .nyhedsbrev p{
+        text-align: left;
+    }
+
+    .nyhedsbrev-input{
+        flex-direction: row;
+    }
+
+    input[type=submit]{
+        padding: 14px 16px;
+    }
+
+    input[type=email]{
+        padding: 14px 120px 14px 20px;
+        margin-right: 8px;
+    }
+
+    input[type=submit]:hover{
+        text-decoration: underline;
+        cursor: pointer;
+    }
 
 
 
@@ -507,5 +597,42 @@ footer li a{
         flex-direction: row;
         justify-content: space-around;
         gap: 40px;
+    }
+
+    .footer-some ul{
+        margin-top: 8px;
+    }
+
+    .footer-some a{
+        font-size: 24px;
+        padding: 10px 4px 0 0;
+    }
+
+    .footer-kontakt a:hover, .footer-om a:hover, .footer-info a:hover{
+        color: #657786;
+    }
+
+    .fa-facebook-f:hover, .fa-facebook-f a:hover{
+        color: #1877F2;
+    }
+
+    .fa-instagram:hover, .fa-instagram a:hover{
+        background: #833ab4;
+        background: linear-gradient(to bottom right,
+       #833ab4,#fd1d1d,#fcb045);
+        background-position: center;
+        background-clip: text;
+        background-size: contain;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        color: transparent;
+    }
+
+    .fa-pinterest-p:hover, .fa-instagram a:hover{
+        color: #E60023;
+    }
+
+    .fa-tiktok:hover{
+        color: #000;
     }
 }
