--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ p{
 h1{
    color: #fff;
    font-size: 28px;
-   font-family: 'Source Sans 3', sans-serif;
+   font-family: 'Lora', serif;
    font-weight: 400;
    text-align: center;
    padding: 0.3em;
